--- a/consultoria.html
+++ b/consultoria.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>Arbache Consultoria</title>
 <link type="text/css" media="screen" href="css/estilos.css" rel="stylesheet"/>
 <link href="css/thickbox.css" rel="stylesheet" type="text/css" media="screen" />
@@ -21,18 +21,18 @@
 <div id="Site">
   <!-- CABECALHO -->
   <div id="Cabecalho">
-    <h1><a href="index.html" title="Ir para a página inicial">Arbache Consultoria</a></h1>
+    <h1><a href="index.html" title="Ir para a pÃ¡gina inicial">Arbache Consultoria</a></h1>
   </div>
   <!-- FIM DE CABECALHO -->
   <hr/>
   <!-- NAVEGACAO -->
   <div id="Navegacao">
-    <h2>Navegação</h2>
+    <h2>NavegaÃ§Ã£o</h2>
     <ul>
       <li> <a href="#Menu">Menu</a> </li>
-      <li> <a href="#Conteudo">Conteúdo</a> </li>
+      <li> <a href="#Conteudo">ConteÃºdo</a> </li>
       <!-- li><a href="Busca">Busca</a></li -->
-      <li> <a href="#Rodape">Rodapé</a> </li>
+      <li> <a href="#Rodape">RodapÃ©</a> </li>
     </ul>
   </div>
   <!-- FIM DE NAVEGACAO -->
@@ -43,9 +43,9 @@
     <div id="Texto">
       <h2>Produtos</h2>
       <p class="descricao">Consultoria</p>
-      <h3>Esse é o título da consultoria</h3>
-      <p>Acima de tudo, é fundamental ressaltar que a execução dos pontos do programa possibilita uma melhor visão global do sistema de participação geral. Por outro lado, a expansão dos mercados mundiais talvez venha a ressaltar a relatividade do retorno esperado a longo prazo. </p>
-      <p id="player"><a href="http://www.macromedia.com/go/getflashplayer">Instale o Flash Player</a> para ver esse vídeo.</p>
+      <h3>Esse Ã© o tÃ­tulo da consultoria</h3>
+      <p>Acima de tudo, Ã© fundamental ressaltar que a execuÃ§Ã£o dos pontos do programa possibilita uma melhor visÃ£o global do sistema de participaÃ§Ã£o geral. Por outro lado, a expansÃ£o dos mercados mundiais talvez venha a ressaltar a relatividade do retorno esperado a longo prazo. </p>
+      <p id="player"><a href="http://www.macromedia.com/go/getflashplayer">Instale o Flash Player</a> para ver esse vÃ­deo.</p>
       <p>
         <script type="text/javascript">
 		var s1 = new SWFObject("flvplayer.swf","single","470","300","7");
@@ -57,8 +57,8 @@
 		s1.write("player");
 		</script>
       </p>
-      <p>As direções preferenciais no sentido do progresso. As experiências acumuladas demonstram que a constante divulgação das informações facilita a criação dos relacionamentos verticais entre as hierarquias.Aas direções preferenciais no sentido do progresso. </p>
-      <p>As experiências acumuladas demonstram que a constante divulgação das informações facilita a criação dos relacionamentos verticais entre as hierarquias.Acima de tudo, é fundamental ressaltar que a execução dos pontos do programa possibilita uma melhor visão global do sistema de participação geral. Por outro lado, a expansão dos mercados mundiais talvez venha a ressaltar a relatividade do retorno esperado a longo prazo. </p>
+      <p>As direÃ§Ãµes preferenciais no sentido do progresso. As experiÃªncias acumuladas demonstram que a constante divulgaÃ§Ã£o das informaÃ§Ãµes facilita a criaÃ§Ã£o dos relacionamentos verticais entre as hierarquias.Aas direÃ§Ãµes preferenciais no sentido do progresso. </p>
+      <p>As experiÃªncias acumuladas demonstram que a constante divulgaÃ§Ã£o das informaÃ§Ãµes facilita a criaÃ§Ã£o dos relacionamentos verticais entre as hierarquias.Acima de tudo, Ã© fundamental ressaltar que a execuÃ§Ã£o dos pontos do programa possibilita uma melhor visÃ£o global do sistema de participaÃ§Ã£o geral. Por outro lado, a expansÃ£o dos mercados mundiais talvez venha a ressaltar a relatividade do retorno esperado a longo prazo. </p>
     </div>
     <!-- FIM DE TEXTO -->
     <hr />
@@ -76,8 +76,8 @@
     <div id="Menu">
       <h2>Menu</h2>
       <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="noticias.html">Notícias</a></li>
+        <li><a href="index.html">InÃ­cio</a></li>
+        <li><a href="noticias.html">NotÃ­cias</a></li>
         <li><a href="quiz.html">Quiz</a></li>
         <li class="ativo produtos"><a href="produtos.html">Produtos</a>
           <ul>
@@ -98,13 +98,13 @@
     <div id="Arbache" class="vcard"><a class="url fn" href="http://www.arbache.com.br">Arbache Consultoria</a>
       <div class="adr">
         <div class="street-address">Rua Paulo Coelho, 1985</div>
-        CEP: <span class="postal-code">60158-960</span> - <span class="locality">Fortaleza</span> - <span class="region">Ceará</span></div>
+        CEP: <span class="postal-code">60158-960</span> - <span class="locality">Fortaleza</span> - <span class="region">CearÃ¡</span></div>
       <div class="tel">+55 (85) 3222.2222</div>
     </div>
     <div id="Tropus" class="vcard"><a class="url fn" href="http://www.tropus.com.br">Tropus Interativa</a>
       <div class="adr">
-        <div class="street-address">Av. Senador Virgílio Távora, nº 1901, Sl 407</div>
-        CEP: <span class="postal-code">60170-251</span> - <span class="locality">Fortaleza</span> - <span class="region">Ceará</span></div>
+        <div class="street-address">Av. Senador VirgÃ­lio TÃ¡vora, nÂº 1901, Sl 407</div>
+        CEP: <span class="postal-code">60170-251</span> - <span class="locality">Fortaleza</span> - <span class="region">CearÃ¡</span></div>
       <div class="tel">+55 (85) 8808.3862</div>
     </div>
   </div>
