Change to UTF-8

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>Arbache Consultoria</title>
 <link type="text/css" media="screen" href="css/estilos.css" rel="stylesheet"/>
 <!--[if IE]>
@@ -15,18 +15,18 @@
 <div id="Site">
   <!-- CABECALHO -->
   <div id="Cabecalho">
-    <h1><a href="index.html" title="Ir para a página inicial">Arbache Consultoria</a></h1>
+    <h1><a href="index.html" title="Ir para a pÃ¡gina inicial">Arbache Consultoria</a></h1>
   </div>
   <!-- FIM DE CABECALHO -->
   <hr/>
   <!-- NAVEGACAO -->
   <div id="Navegacao">
-    <h2>Navegação</h2>
+    <h2>NavegaÃ§Ã£o</h2>
     <ul>
       <li> <a href="#Menu">Menu</a> </li>
-      <li> <a href="#Conteudo">Conteúdo</a> </li>
+      <li> <a href="#Conteudo">ConteÃºdo</a> </li>
       <!-- li><a href="Busca">Busca</a></li -->
-      <li> <a href="#Rodape">Rodapé</a> </li>
+      <li> <a href="#Rodape">RodapÃ©</a> </li>
     </ul>
   </div>
   <!-- FIM DE NAVEGACAO -->
@@ -39,18 +39,18 @@
       <div id="Principal">
         <p><a href="noticia.html"><img src="tmp/principal.jpg" alt="destaque principal" /></a></p>
         <h2><a href="noticia.html">Consultoria Em Foco</a></h2>
-        <p><a href="noticia.html">É claro que o curso contínuo de distintas formas de atuação estimula a padronização dos relacionamentos</a></p>
+        <p><a href="noticia.html">Ã‰ claro que o curso contÃ­nuo de distintas formas de atuaÃ§Ã£o estimula a padronizaÃ§Ã£o dos relacionamentos</a></p>
       </div>
       <!-- FIM DE PRINCIPAL -->
       <hr/>
       <!-- SECUNDARIOS -->
       <div id="Secundarios">
-        <h2>Destaques Secundários</h2>
+        <h2>Destaques SecundÃ¡rios</h2>
         <ul>
-          <li><a href="noticia.html"><em class="data">20.11.2007</em> <strong>A ARBACHE</strong> Claro que o desenvolvimento contínuo de distintas formas de atuação estimula a padronização dos relacionamentos verticais </a> </li>
-          <li><a href="noticia.html"><em class="data">20.11.2007</em> <strong>A ARBACHE</strong> Claro que o desenvolvimento contínuo de distintas formas de atuação estimula a padronização dos relacionamentos verticais </a> </li>
-          <li><a href="noticia.html"><em class="data">20.11.2007</em> <strong>A ARBACHE</strong> Claro que o desenvolvimento contínuo de distintas formas de atuação estimula a padronização dos relacionamentos verticais </a> </li>
-          <li><a href="noticia.html"><em class="data">20.11.2007</em> <strong>A ARBACHE</strong> Claro que o desenvolvimento contínuo de distintas formas de atuação estimula a padronização dos relacionamentos verticais </a> </li>
+          <li><a href="noticia.html"><em class="data">20.11.2007</em> <strong>A ARBACHE</strong> Claro que o desenvolvimento contÃ­nuo de distintas formas de atuaÃ§Ã£o estimula a padronizaÃ§Ã£o dos relacionamentos verticais </a> </li>
+          <li><a href="noticia.html"><em class="data">20.11.2007</em> <strong>A ARBACHE</strong> Claro que o desenvolvimento contÃ­nuo de distintas formas de atuaÃ§Ã£o estimula a padronizaÃ§Ã£o dos relacionamentos verticais </a> </li>
+          <li><a href="noticia.html"><em class="data">20.11.2007</em> <strong>A ARBACHE</strong> Claro que o desenvolvimento contÃ­nuo de distintas formas de atuaÃ§Ã£o estimula a padronizaÃ§Ã£o dos relacionamentos verticais </a> </li>
+          <li><a href="noticia.html"><em class="data">20.11.2007</em> <strong>A ARBACHE</strong> Claro que o desenvolvimento contÃ­nuo de distintas formas de atuaÃ§Ã£o estimula a padronizaÃ§Ã£o dos relacionamentos verticais </a> </li>
         </ul>
       </div>
       <!-- FIM DE SECUNDARIOS -->
@@ -71,8 +71,8 @@
     <div id="Menu">
       <h2>Menu</h2>
       <ul>
-        <li class="ativo"><a href="index.html">Início</a></li>
-        <li><a href="noticias.html">Notícias</a></li>
+        <li class="ativo"><a href="index.html">InÃ­cio</a></li>
+        <li><a href="noticias.html">NotÃ­cias</a></li>
         <li><a href="quiz.html">Quiz</a></li>
         <li class="produtos"><a href="produtos.html">Produtos</a>
           <ul>
@@ -93,13 +93,13 @@
     <div id="Arbache" class="vcard"><a class="url fn" href="http://www.arbache.com.br">Arbache Consultoria</a>
       <div class="adr">
         <div class="street-address">Rua Paulo Coelho, 1985</div>
-        CEP: <span class="postal-code">60158-960</span> - <span class="locality">Fortaleza</span> - <span class="region">Ceará</span></div>
+        CEP: <span class="postal-code">60158-960</span> - <span class="locality">Fortaleza</span> - <span class="region">CearÃ¡</span></div>
       <div class="tel">+55 (85) 3222.2222</div>
     </div>
     <div id="Tropus" class="vcard"><a class="url fn" href="http://www.tropus.com.br">Tropus Interativa</a>
       <div class="adr">
-        <div class="street-address">Av. Senador Virgílio Távora, nº 1901, Sl 407</div>
-        CEP: <span class="postal-code">60170-251</span> - <span class="locality">Fortaleza</span> - <span class="region">Ceará</span></div>
+        <div class="street-address">Av. Senador VirgÃ­lio TÃ¡vora, nÂº 1901, Sl 407</div>
+        CEP: <span class="postal-code">60170-251</span> - <span class="locality">Fortaleza</span> - <span class="region">CearÃ¡</span></div>
       <div class="tel">+55 (85) 8808.3862</div>
     </div>
   </div>
