--- a/noticia.html
+++ b/noticia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>Arbache Consultoria</title>
 <link type="text/css" media="screen" href="css/estilos.css" rel="stylesheet"/>
 <link href="css/thickbox.css" rel="stylesheet" type="text/css" media="screen" />
@@ -20,18 +20,18 @@
 <div id="Site">
   <!-- CABECALHO -->
   <div id="Cabecalho">
-    <h1><a href="index.html" title="Ir para a página inicial">Arbache Consultoria</a></h1>
+    <h1><a href="index.html" title="Ir para a pÃ¡gina inicial">Arbache Consultoria</a></h1>
   </div>
   <!-- FIM DE CABECALHO -->
   <hr/>
   <!-- NAVEGACAO -->
   <div id="Navegacao">
-    <h2>Navegação</h2>
+    <h2>NavegaÃ§Ã£o</h2>
     <ul>
       <li> <a href="#Menu">Menu</a> </li>
-      <li> <a href="#Conteudo">Conteúdo</a> </li>
+      <li> <a href="#Conteudo">ConteÃºdo</a> </li>
       <!-- li><a href="Busca">Busca</a></li -->
-      <li> <a href="#Rodape">Rodapé</a> </li>
+      <li> <a href="#Rodape">RodapÃ©</a> </li>
     </ul>
   </div>
   <!-- FIM DE NAVEGACAO -->
@@ -40,24 +40,24 @@
   <div id="Conteudo">
     <!-- TEXTO -->
     <div id="Texto">
-      <h2>Notícias</h2>
+      <h2>NotÃ­cias</h2>
       <p class="descricao">01.12.2007</p>
       <h3>Novo Curso</h3>
-      <p>Acima de tudo, é fundamental ressaltar que a execução dos pontos do programa possibilita uma melhor visão global do sistema de participação geral. Por outro lado, a expansão dos mercados mundiais talvez venha a ressaltar a relatividade do retorno esperado a longo prazo. </p>
+      <p>Acima de tudo, Ã© fundamental ressaltar que a execuÃ§Ã£o dos pontos do programa possibilita uma melhor visÃ£o global do sistema de participaÃ§Ã£o geral. Por outro lado, a expansÃ£o dos mercados mundiais talvez venha a ressaltar a relatividade do retorno esperado a longo prazo. </p>
       <ul>
-        <li>Cotidiana prova <a href="index.html">que</a> a prática cotidiana </li>
+        <li>Cotidiana prova <a href="index.html">que</a> a prÃ¡tica cotidiana </li>
         <li>A prova que a crescente </li>
-        <li>influência da mídia desafia a capacidade de equalização</li>
+        <li>influÃªncia da mÃ­dia desafia a capacidade de equalizaÃ§Ã£o</li>
       </ul>
-      <p>As direções preferenciais no sentido do progresso. As experiências acumuladas demonstram que a constante divulgação das informações facilita a criação dos relacionamentos verticais entre as hierarquias.Aas direções preferenciais no sentido do progresso. </p>
-      <p><a href="tmp/principal.jpg" class="thickbox" rel="galeria" title="ampliar 2"><img src="tmp/principal.jpg" alt="imagem" align="right" /></a> As experiências acumuladas demonstram que a constante divulgação das informações facilita a criação dos relacionamentos verticais entre as hierarquias.Acima de tudo, é fundamental ressaltar que a execução dos pontos do programa possibilita uma melhor visão global do sistema de participação geral. Por outro lado, a expansão dos mercados mundiais talvez venha a ressaltar a relatividade do retorno esperado a longo prazo. </p>
-      <p>No mundo atual, o entendimento das metas propostas maximiza as possibilidades por conta das posturas dos órgãos dirigentes com relação às suas atribuições. Neste sentido, <a href="index.html">o comprometimento entre as equipes</a> apresenta tendências no sentido de aprovar a manutenção do fluxo de informações. Por outro lado, a expansão dos mercados mundiais.</p>
+      <p>As direÃ§Ãµes preferenciais no sentido do progresso. As experiÃªncias acumuladas demonstram que a constante divulgaÃ§Ã£o das informaÃ§Ãµes facilita a criaÃ§Ã£o dos relacionamentos verticais entre as hierarquias.Aas direÃ§Ãµes preferenciais no sentido do progresso. </p>
+      <p><a href="tmp/principal.jpg" class="thickbox" rel="galeria" title="ampliar 2"><img src="tmp/principal.jpg" alt="imagem" align="right" /></a> As experiÃªncias acumuladas demonstram que a constante divulgaÃ§Ã£o das informaÃ§Ãµes facilita a criaÃ§Ã£o dos relacionamentos verticais entre as hierarquias.Acima de tudo, Ã© fundamental ressaltar que a execuÃ§Ã£o dos pontos do programa possibilita uma melhor visÃ£o global do sistema de participaÃ§Ã£o geral. Por outro lado, a expansÃ£o dos mercados mundiais talvez venha a ressaltar a relatividade do retorno esperado a longo prazo. </p>
+      <p>No mundo atual, o entendimento das metas propostas maximiza as possibilidades por conta das posturas dos Ã³rgÃ£os dirigentes com relaÃ§Ã£o Ã s suas atribuiÃ§Ãµes. Neste sentido, <a href="index.html">o comprometimento entre as equipes</a> apresenta tendÃªncias no sentido de aprovar a manutenÃ§Ã£o do fluxo de informaÃ§Ãµes. Por outro lado, a expansÃ£o dos mercados mundiais.</p>
       <ol>
-        <li>Cotidiana prova que a prática cotidiana </li>
+        <li>Cotidiana prova que a prÃ¡tica cotidiana </li>
         <li>A prova que a crescente </li>
-        <li>influência da mídia desafia a capacidade de equalização</li>
+        <li>influÃªncia da mÃ­dia desafia a capacidade de equalizaÃ§Ã£o</li>
       </ol>
-      <p>Cotidiana prova que a prática cotidiana prova que a crescente influência da mídia desafia a capacidade de equalização das direções preferenciais no sentido do progresso. As experiências acumuladas demonstram que a constante divulgação das informações facilita a criação dos relacionamentos verticais entre as hierarquias.</p>
+      <p>Cotidiana prova que a prÃ¡tica cotidiana prova que a crescente influÃªncia da mÃ­dia desafia a capacidade de equalizaÃ§Ã£o das direÃ§Ãµes preferenciais no sentido do progresso. As experiÃªncias acumuladas demonstram que a constante divulgaÃ§Ã£o das informaÃ§Ãµes facilita a criaÃ§Ã£o dos relacionamentos verticais entre as hierarquias.</p>
     </div>
     <!-- FIM DE TEXTO -->
     <hr />
@@ -68,8 +68,8 @@
     <div id="Menu">
       <h2>Menu</h2>
       <ul>
-        <li><a href="index.html">Início</a></li>
-        <li class="ativo"><a href="noticias.html">Notícias</a></li>
+        <li><a href="index.html">InÃ­cio</a></li>
+        <li class="ativo"><a href="noticias.html">NotÃ­cias</a></li>
         <li><a href="quiz.html">Quiz</a></li>
         <li class="produtos"><a href="produtos.html">Produtos</a>
           <ul>
@@ -90,13 +90,13 @@
     <div id="Arbache" class="vcard"><a class="url fn" href="http://www.arbache.com.br">Arbache Consultoria</a>
       <div class="adr">
         <div class="street-address">Rua Paulo Coelho, 1985</div>
-        CEP: <span class="postal-code">60158-960</span> - <span class="locality">Fortaleza</span> - <span class="region">Ceará</span></div>
+        CEP: <span class="postal-code">60158-960</span> - <span class="locality">Fortaleza</span> - <span class="region">CearÃ¡</span></div>
       <div class="tel">+55 (85) 3222.2222</div>
     </div>
     <div id="Tropus" class="vcard"><a class="url fn" href="http://www.tropus.com.br">Tropus Interativa</a>
       <div class="adr">
-        <div class="street-address">Av. Senador Virgílio Távora, nº 1901, Sl 407</div>
-        CEP: <span class="postal-code">60170-251</span> - <span class="locality">Fortaleza</span> - <span class="region">Ceará</span></div>
+        <div class="street-address">Av. Senador VirgÃ­lio TÃ¡vora, nÂº 1901, Sl 407</div>
+        CEP: <span class="postal-code">60170-251</span> - <span class="locality">Fortaleza</span> - <span class="region">CearÃ¡</span></div>
       <div class="tel">+55 (85) 8808.3862</div>
     </div>
   </div>
